# visionscribe

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.ai-cli-log/: claude-20250906-235533-video-to-code-design.txt
docs/: project_structure.md
src/visionscribe/: __init__.py  ai_reconstructor.py  main.py  models.py  output_generator.py  text_deduplicator.py  text_extractor.py  video_processor.py
src/visionscribe/utils/: file_utils.py  image_utils.py  text_similarity.py  text_utils.py  video_utils.py
